--- a/source/sass/blocks/hamburger-menu.scss
+++ b/source/sass/blocks/hamburger-menu.scss
@@ -15,7 +15,7 @@
   background-color: $header-icon-color;
   box-shadow: 0 10px 0 0 $header-icon-color, 0 20px 0 0 $header-icon-color;
 
-  transition: 0.4s;
+  transition: 0.4 s;
 }
 
 .hamburger-menu--closed .main-nav__toggle:hover::before,
@@ -76,7 +76,7 @@
   }
 
   @include laptop-min() {
-    background-position: center top;
+    background-position: center 11px;
   }
 }
 
