--- a/source/sass/blocks/post.scss
+++ b/source/sass/blocks/post.scss
@@ -3,35 +3,6 @@
   flex-direction: column;
 }
 
-.post__link {
-  position: relative;
-}
-
-.post__hit {
-  position: absolute;
-  right: 20px;
-
-  width: 140px;
-  padding: 6px 0;
-
-  font-size: 12px;
-  font-weight: 700;
-  color: $white;
-  text-align: center;
-  text-transform: uppercase;
-
-  background-color: $pink;
-
-  @include tablet() {
-    top: 57px;
-  }
-
-  @include desktop() {
-    top: 53px;
-    right: 130px;
-  }
-}
-
 .post__source-photo {
   display: block;
   flex-basis: 100%;
@@ -54,6 +25,8 @@
 }
 
 .post__description {
+  position: relative;
+
   display: flex;
   flex-direction: column;
   flex-basis: 100%;
@@ -80,6 +53,27 @@
       min-height: 55px;
       padding: 24px 31px 15px 28px;
     }
+  }
+}
+
+.post__hit {
+  position: absolute;
+  top: -137px;
+  right: 0;
+
+  width: 140px;
+  padding: 6px 0;
+
+  font-size: 12px;
+  font-weight: 700;
+  color: $white;
+  text-align: center;
+  text-transform: uppercase;
+
+  background-color: $pink;
+
+  @include tablet() {
+    top: -453px;
   }
 }
 
