--- a/source/sass/blocks/hamburger-menu.scss
+++ b/source/sass/blocks/hamburger-menu.scss
@@ -75,19 +75,19 @@
     background-position: center 255px;
   }
 
-  @include laptop-min() {
+  @include desktop() {
     background-position: center 11px;
   }
 }
 
 .hamburger-menu--opened .main-nav__wrapper {
-  @include laptop-max() {
+  @include desktop-max() {
     background-color: $nav-background-color;
   }
 }
 
 .hamburger-menu--closed .main-nav__list {
-  @include laptop-max() {
+  @include desktop-max() {
     display: none;
   }
 }
@@ -97,7 +97,7 @@
 }
 
 .hamburger-menu--nojs .main-nav__wrapper {
-  @include laptop-max() {
+  @include desktop-max() {
     background-color: $nav-background-color;
   }
 }
@@ -107,7 +107,7 @@
 }
 
 .hamburger-menu--nojs .main-nav__list {
-  @include laptop-max() {
+  @include desktop-max() {
     display: block;
   }
 }
