--- a/source/sass/blocks/link.scss
+++ b/source/sass/blocks/link.scss
@@ -25,7 +25,7 @@
     color: rgba($link-text-action-color, 0.3%);
   }
 
-  @include laptop-min() {
+  @include desktop() {
     padding: 15px;
 
     font-size: 21px;
