--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -5,7 +5,7 @@
 }
 
 .main-nav__wrapper {
-  @include laptop-min() {
+  @include desktop() {
     display: flex;
     align-items: flex-start;
     width: 940px;
@@ -23,7 +23,7 @@
     padding-bottom: 46px;
   }
 
-  @include laptop-min() {
+  @include desktop() {
     margin-right: auto;
     padding: 0;
   }
@@ -49,7 +49,7 @@
     right: 16px;
   }
 
-  @include laptop-min() {
+  @include desktop() {
     display: none;
   }
 }
