--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -15,7 +15,7 @@
   @include tablet() {
     width: 640px;
     padding-top: 91px;
-    padding-left: 10px;
+    // padding-left: 10px;
     box-sizing: border-box;
 
     background-image: url("../img/iphone-hand-tablet@1x.png");
@@ -71,6 +71,7 @@
 
 .intro__title {
   margin: 0;
+  padding: 0 10px;
 
   font-size: 24px;
   font-weight: 300;
@@ -81,6 +82,7 @@
   @include tablet() {
     width: 620px;
     margin: 0 auto;
+    padding: 0;
 
     font-size: 50px;
     line-height: 59px;
