Исправляет ошибки в разметке по методологии. Критерий Б5

--- a/source/sass/blocks/price.scss
+++ b/source/sass/blocks/price.scss
@@ -11,8 +11,8 @@
   }
 }
 
-.price__toggles {
-  margin: 0;
-
-  text-align: center;
+.price__bullets {
+  @include tablet() {
+    display: none;
+  }
 }
