Исправляет замечания по шрифтам и соответствии макету. Критерии Б8 и Б11

--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -15,7 +15,7 @@
   @include tablet() {
     width: 640px;
     padding-top: 91px;
-    // padding-left: 10px;
+    padding-left: 10px;
     box-sizing: border-box;
 
     background-image: url("../img/iphone-hand-tablet@1x.png");
