--- a/source/sass/config/variables.scss
+++ b/source/sass/config/variables.scss
@@ -4,7 +4,7 @@ $tablet: 660px;
 $phones: 320px;
 
 // variables for applying font
-$main-font: "Opensans", "Arial", sans-serif;
+$main-font: "Open Sans", "Arial", sans-serif;
 
 // variables for colors
 $pink: #d22856;
