Правит стили блоков footer и social-list для прохождения теста на переполнение контентом. Критерий Д13

--- a/source/sass/blocks/social-list.scss
+++ b/source/sass/blocks/social-list.scss
@@ -1,3 +1,14 @@
+.social-list {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  width: 188px;
+}
+
+.social-list__item {
+  padding-bottom: 10px;
+}
+
 .social-list__link {
   display: flex;
   justify-content: center;
