--- a/source/sass/blocks/data.scss
+++ b/source/sass/blocks/data.scss
@@ -63,10 +63,14 @@
 
 .data__input {
   width: 100%;
-  padding: 18px 20px;
+  min-height: 64px;
+  padding: 15px 20px;
   box-sizing: border-box;
 
   font: inherit;
+  font-size: 18px;
+  line-height: 30px;
+  color: inherit;
 
   border: 2px solid $form-element-decor-color;
   border-radius: 2px;
@@ -84,22 +88,19 @@
     border: 2px solid $form-element-modify-color;
   }
 
-  &::placeholder {
-    font-size: 18px;
-    line-height: 30px;
-    color: $form-element-placeholder-color;
-  }
-
   &--contacts {
     @include tablet() {
-      padding: 18px;
-
       background-image: linear-gradient(to right, $white 88%, $darkgray 88%);
     }
 
     @include desktop() {
       background-image: linear-gradient(to right, $white 84%, $darkgray 84%);
     }
+  }
+
+  @include placeholder() {
+    color: $form-element-placeholder-color;
+    opacity: 1;
   }
 }
 
