--- a/source/sass/blocks/post.scss
+++ b/source/sass/blocks/post.scss
@@ -3,6 +3,56 @@
   flex-direction: column;
 }
 
+.post__link {
+  position: relative;
+
+  &--panorama {
+    width: 320px;
+    margin: 0 auto;
+
+    @include tablet() {
+      width: 660px;
+    }
+
+    @include desktop() {
+      width: 960px;
+    }
+
+    @include large-desktop() {
+      width: 1200px;
+    }
+  }
+}
+
+.post__hit {
+  position: absolute;
+  right: 20px;
+
+  width: 140px;
+  padding: 6px 0;
+
+  font-size: 12px;
+  font-weight: 700;
+  color: $white;
+  text-align: center;
+  text-transform: uppercase;
+
+  background-color: $pink;
+
+  @include tablet() {
+    top: 57px;
+  }
+
+  @include desktop() {
+    top: 53px;
+    right: 10px;
+  }
+
+  @include large-desktop() {
+    right: 130px;
+  }
+}
+
 .post__source-photo {
   display: block;
   flex-basis: 100%;
@@ -14,28 +64,17 @@
   height: auto;
 
   &--panorama {
-    width: 320px;
-    margin: 0 auto;
-
     @include tablet() {
-      width: 660px;
       height: 509px;
     }
 
     @include desktop() {
-      width: 960px;
       height: 506px;
-    }
-
-    @include large-desktop() {
-      width: 1200px;
     }
   }
 }
 
 .post__description {
-  position: relative;
-
   display: flex;
   flex-direction: column;
   flex-basis: 100%;
@@ -62,27 +101,6 @@
       min-height: 55px;
       padding: 24px 31px 15px 28px;
     }
-  }
-}
-
-.post__hit {
-  position: absolute;
-  top: -137px;
-  right: 0;
-
-  width: 140px;
-  padding: 6px 0;
-
-  font-size: 12px;
-  font-weight: 700;
-  color: $white;
-  text-align: center;
-  text-transform: uppercase;
-
-  background-color: $pink;
-
-  @include tablet() {
-    top: -453px;
   }
 }
 
