--- a/source/sass/config/variables.scss
+++ b/source/sass/config/variables.scss
@@ -78,6 +78,7 @@ $reset-action-background-color: $blue;
 
 // variables for applying colors form.html
 $fieldset-border-color: $darkgray;
+$fieldset-background-color: $gray;
 
 $legend-text-color: $pink;
 
