--- a/source/sass/blocks/hamburger-menu.scss
+++ b/source/sass/blocks/hamburger-menu.scss
@@ -72,29 +72,29 @@
 .hamburger-menu--nojs.header {
   background-position: center 259px;
 
-  @include tablet() {
+  @media ($tablet) {
     background-position: center 255px;
   }
 
-  @include desktop() {
+  @media ($desktop) {
     background-position: center top;
   }
 }
 
 .hamburger-menu--opened .main-nav__wrapper {
-  @include desktop-max() {
+  @media ($desktop-max) {
     background-color: $nav-background-color;
   }
 }
 
 .hamburger-menu--closed .main-nav__list {
-  @include desktop-max() {
+  @media ($desktop-max) {
     display: none;
   }
 }
 
 .hamburger-menu--nojs .main-nav__wrapper {
-  @include desktop-max() {
+  @media ($desktop-max) {
     background-color: $nav-background-color;
   }
 }
@@ -104,7 +104,7 @@
 }
 
 .hamburger-menu--nojs .main-nav__list {
-  @include desktop-max() {
+  @media ($desktop-max) {
     display: block;
   }
 }
