--- a/source/sass/blocks/slider.scss
+++ b/source/sass/blocks/slider.scss
@@ -5,7 +5,7 @@
 
   overflow: hidden;
 
-  @include tablet() {
+  @media ($tablet) {
     padding: 0;
   }
 }
@@ -30,7 +30,7 @@
 
   cursor: pointer;
 
-  @include desktop() {
+  @media ($desktop) {
     display: none;
   }
 
@@ -53,7 +53,7 @@
 .slider__toggle {
   display: none;
 
-  @include desktop() {
+  @media ($desktop) {
     position: absolute;
     top: 219px;
 
