--- a/source/sass/blocks/buttons.scss
+++ b/source/sass/blocks/buttons.scss
@@ -1,5 +1,5 @@
 .buttons {
-  @include desktop() {
+  @media ($desktop) {
     display: flex;
     justify-content: space-between;
   }
@@ -42,7 +42,7 @@
       background-color: $submit-action-background-color;
     }
 
-    @include tablet() {
+    @media ($tablet) {
       margin-bottom: 25px;
     }
   }
@@ -66,11 +66,11 @@
     }
   }
 
-  @include tablet() {
+  @media ($tablet) {
     width: 260px;
   }
 
-  @include desktop() {
+  @media ($desktop) {
     width: 184px;
     margin: 0;
   }
