--- a/source/sass/blocks/competition.scss
+++ b/source/sass/blocks/competition.scss
@@ -3,11 +3,11 @@
   padding-right: 20px;
   padding-left: 20px;
 
-  @include tablet() {
+  @media ($tablet) {
     padding-top: 92px;
   }
 
-  @include desktop() {
+  @media ($desktop) {
     margin-bottom: 71px;
   }
 }
@@ -18,14 +18,14 @@
   line-height: 30px;
   text-align: center;
 
-  @include tablet() {
+  @media ($tablet) {
     width: 545px;
     margin: 0 auto;
 
     font-size: 18px;
   }
 
-  @include desktop() {
+  @media ($desktop) {
     width: 760px;
   }
 }
@@ -33,7 +33,7 @@
 .competition__hidden {
   display: none;
 
-  @include tablet() {
+  @media ($tablet) {
     display: inline;
   }
 }
@@ -44,7 +44,7 @@
   align-items: center;
   flex-wrap: wrap;
 
-  @include tablet() {
+  @media ($tablet) {
     justify-content: space-between;
   }
 }
