--- a/source/sass/blocks/filter.scss
+++ b/source/sass/blocks/filter.scss
@@ -1,5 +1,5 @@
 .filter {
-  @include desktop() {
+  @media ($desktop) {
     background-image: url("../img/iphone-screen-2-desktop@1x.png");
     background-position: -21px 0;
     background-repeat: no-repeat;
