--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-wrap: wrap;
 
-  @include desktop() {
+  @media ($desktop) {
     width: 940px;
     margin: 0 auto;
   }
@@ -15,13 +15,13 @@
 
   border: none;
 
-  @include tablet() {
+  @media ($tablet) {
     margin: 0 20px;
 
     border: 2px solid $fieldset-border-color;
   }
 
-  @include desktop() {
+  @media ($desktop) {
     margin-right: 0;
     margin-left: 0;
   }
@@ -31,12 +31,12 @@
 
     border: none;
 
-    @include tablet() {
+    @media ($tablet) {
       order: -3;
       padding: 70px 0 55px 0;
     }
 
-    @include desktop() {
+    @media ($desktop) {
       flex-basis: 435px;
       margin-right: auto;
       padding-top: 14px;
@@ -50,14 +50,14 @@
 
     background-color: $fieldset-background-color;
 
-    @include tablet() {
+    @media ($tablet) {
       margin-bottom: 57px;
       padding: 48px 30px 53px 58px;
 
       background-color: transparent;
     }
 
-    @include desktop() {
+    @media ($desktop) {
       padding-bottom: 9px;
     }
   }
@@ -65,14 +65,14 @@
   &--contacts {
     margin-bottom: 23px;
 
-    @include tablet() {
+    @media ($tablet) {
       order: -1;
 
       padding: 37px 59px 27px 58px;
       margin-bottom: 56px;
     }
 
-    @include desktop() {
+    @media ($desktop) {
       padding-top: 33px;
       padding-bottom: 13px;
     }
@@ -85,7 +85,7 @@
 
     background-color: $fieldset-background-color;
 
-    @include tablet() {
+    @media ($tablet) {
       order: -2;
       margin-bottom: 57px;
       padding: 48px 30px 59px 58px;
@@ -93,7 +93,7 @@
       background-color: transparent;
     }
 
-    @include desktop() {
+    @media ($desktop) {
       flex-basis: 435px;
       padding: 50px 20px;
       box-sizing: border-box;
@@ -104,12 +104,12 @@
     margin-bottom: 43px;
     padding-top: 16px;
 
-    @include tablet() {
+    @media ($tablet) {
       margin-bottom: 68px;
       padding: 37px 58px 44px 58px;
     }
 
-    @include desktop() {
+    @media ($desktop) {
       margin-bottom: 66px;
       padding-top: 33px;
       padding-bottom: 37px;
@@ -130,14 +130,14 @@
   text-align: center;
   text-transform: uppercase;
 
-  @include tablet() {
+  @media ($tablet) {
     top: 0;
   }
 
   &--contacts {
     display: none;
 
-    @include tablet() {
+    @media ($tablet) {
       display: block;
     }
   }
@@ -150,7 +150,7 @@
 .form__wrapper {
   margin: 0 20px;
 
-  @include tablet() {
+  @media ($tablet) {
     margin: 0;
   }
 }
@@ -159,7 +159,7 @@
   @include list;
 
   &--achievement {
-    @include desktop() {
+    @media ($desktop) {
       display: flex;
       justify-content: space-between;
       flex-wrap: wrap;
@@ -170,7 +170,7 @@
     width: 280px;
     margin: 0 auto;
 
-    @include tablet() {
+    @media ($tablet) {
       width: auto;
       margin: 0;
     }
@@ -185,7 +185,7 @@
   }
 
   &--achievement {
-    @include desktop() {
+    @media ($desktop) {
       flex-basis: 260px;
       order: 4;
       padding-left: 19px;
@@ -194,20 +194,20 @@
   }
 
   &--beach {
-    @include desktop() {
+    @media ($desktop) {
       order: 4;
       flex-basis: 260px;
     }
   }
 
   &--chuck {
-    @include desktop() {
+    @media ($desktop) {
       order: 2;
     }
   }
 
   &--tower {
-    @include desktop() {
+    @media ($desktop) {
       order: 3;
     }
   }
@@ -216,7 +216,7 @@
   &--app {
     margin-bottom: 45px;
 
-    @include desktop() {
+    @media ($desktop) {
       margin-bottom: 44px;
       padding-left: 54px;
     }
@@ -233,7 +233,7 @@
 
   cursor: pointer;
 
-  @include tablet() {
+  @media ($tablet) {
     padding-left: 59px;
   }
 
@@ -338,11 +338,11 @@
 
   resize: none;
 
-  @include tablet() {
+  @media ($tablet) {
     min-height: 193px;
   }
 
-  @include desktop() {
+  @media ($desktop) {
     min-height: 128px;
   }
 
@@ -366,7 +366,7 @@
 .form__button {
   margin-bottom: 35px;
 
-  @include tablet() {
+  @media ($tablet) {
     margin-bottom: 0;
   }
 }
@@ -386,7 +386,7 @@
 .form__description-specify {
   display: none;
 
-  @include desktop() {
+  @media ($desktop) {
     display: inline;
   }
 }
