--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -12,7 +12,7 @@
     background-size: 258px auto;
   }
 
-  @include tablet() {
+  @media ($tablet) {
     width: 640px;
     padding-top: 91px;
     box-sizing: border-box;
@@ -26,7 +26,7 @@
     }
   }
 
-  @include desktop() {
+  @media ($desktop) {
     width: 940px;
     padding-top: 111px;
 
@@ -45,23 +45,23 @@
 
     background-image: none;
 
-    @include tablet() {
+    @media ($tablet) {
       padding-top: 69px;
       padding-bottom: 110px;
     }
 
-    @include desktop() {
+    @media ($desktop) {
       padding-top: 67px;
       padding-bottom: 71px;
     }
   }
 
   &--competition {
-    @include tablet() {
+    @media ($tablet) {
       padding-bottom: 81px;
     }
 
-    @include desktop() {
+    @media ($desktop) {
       padding-bottom: 101px;
     }
   }
@@ -77,7 +77,7 @@
   color: $intro-text-color;
   text-align: center;
 
-  @include tablet() {
+  @media ($tablet) {
     width: 620px;
     margin: 0 auto;
     padding: 0;
@@ -87,7 +87,7 @@
   }
 
   &--competition {
-    @include desktop() {
+    @media ($desktop) {
       width: 754px;
     }
   }
@@ -101,13 +101,13 @@
   margin: 0 auto;
   padding-bottom: 30px;
 
-  @include tablet() {
+  @media ($tablet) {
     margin: 0;
     padding-bottom: 110px;
     padding-left: 10px;
   }
 
-  @include desktop() {
+  @media ($desktop) {
     padding-bottom: 122px;
     padding-left: 0;
   }
