--- a/source/sass/blocks/menu-list.scss
+++ b/source/sass/blocks/menu-list.scss
@@ -5,7 +5,7 @@
 
   border-bottom: 1px solid $menu-decor-color;
 
-  @include desktop() {
+  @media ($desktop) {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
@@ -21,7 +21,7 @@
 
   box-shadow: 0 -1px 0 0 #485461, 0 -2px 0 0 $black;
 
-  @include desktop() {
+  @media ($desktop) {
     display: flex;
     padding: 0;
 
@@ -40,7 +40,7 @@
 
   transition: 0.3s;
 
-  @include desktop() {
+  @media ($desktop) {
     font-size: 18px;
     font-weight: 400;
     line-height: 18px;
@@ -62,7 +62,7 @@
 .menu-list__link[href]:active {
   color: rgba($menu-text-action-color, 0.3%);
 
-  @include desktop() {
+  @media ($desktop) {
     color: rgba($menu-text-color, 0.3%);
   }
 }
