--- a/source/sass/blocks/modal.scss
+++ b/source/sass/blocks/modal.scss
@@ -8,14 +8,14 @@
 
   box-shadow: 0 6px 13px 2px #757575;
 
-  @include tablet() {
+  @media ($tablet) {
     top: 9%;
 
     width: 460px;
     margin: 0 auto;
   }
 
-  @include desktop() {
+  @media ($desktop) {
     width: 780px;
   }
 }
@@ -26,7 +26,7 @@
   padding-bottom: 11px;
 
 
-  @include desktop() {
+  @media ($desktop) {
     background-image: linear-gradient(to bottom, $white 57%, $gray 57%);
   }
 }
@@ -38,7 +38,7 @@
 
   background-image: linear-gradient(to bottom, $white 57%, $gray 57%);
 
-  @include desktop() {
+  @media ($desktop) {
     padding-top: 41px;
   }
 }
@@ -47,13 +47,13 @@
   width: 280px;
   margin: 0 auto;
 
-  @include tablet() {
+  @media ($tablet) {
     width: 320px;
 
     text-align: center;
   }
 
-  @include desktop() {
+  @media ($desktop) {
     width: 410px;
 
     &--show {
@@ -71,7 +71,7 @@
   color: $modal-title-color;
   text-align: center;
 
-  @include tablet() {
+  @media ($tablet) {
     margin-bottom: 21px;
     padding: 0 30px;
 
@@ -86,19 +86,19 @@
 
   text-align: center;
 
-  @include tablet() {
+  @media ($tablet) {
     font-size: 18px;
     line-height: 24px;
   }
 
-  @include desktop() {
+  @media ($desktop) {
     margin-bottom: 110px;
   }
 
   &--show {
     margin-bottom: 82px;
 
-    @include desktop() {
+    @media ($desktop) {
       margin-bottom: 88px;
     }
   }
