--- a/source/sass/blocks/photo-content.scss
+++ b/source/sass/blocks/photo-content.scss
@@ -1,5 +1,5 @@
 .photo-content__wrapper {
-  @include tablet() {
+  @media ($tablet) {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -11,11 +11,11 @@
 
   background-color: $photo-background-color;
 
-  @include tablet() {
+  @media ($tablet) {
     flex-basis: 300px;
   }
 
-  @include desktop() {
+  @media ($desktop) {
     margin-bottom: 53px;
   }
 }
@@ -29,11 +29,11 @@
 .photo-content__header {
   padding: 45px 20px 49px 20px;
 
-  @include tablet() {
+  @media ($tablet) {
     padding: 92px 20px 76px 20px;
   }
 
-  @include desktop() {
+  @media ($desktop) {
     padding: 92px 20px 88px 20px;
   }
 }
@@ -45,13 +45,13 @@
   line-height: 30px;
   text-align: center;
 
-  @include tablet() {
+  @media ($tablet) {
     width: 500px;
 
     font-size: 18px;
   }
 
-  @include desktop() {
+  @media ($desktop) {
     width: 585px;
   }
 }
@@ -59,11 +59,11 @@
 .photo-content__footer {
   padding: 24px 20px 43px 20px;
 
-  @include tablet() {
+  @media ($tablet) {
     padding: 43px 20px 69px 20px;
   }
 
-  @include desktop() {
+  @media ($desktop) {
     padding: 7px 20px 66px 20px;
   }
 }
