--- a/source/sass/blocks/price.scss
+++ b/source/sass/blocks/price.scss
@@ -2,17 +2,17 @@
   background-color: $gray;
   background-image: linear-gradient(-5deg, $gray 89%, $white 0%);
 
-  @include tablet() {
+  @media ($tablet) {
     background-image: linear-gradient(-4deg, $gray 86%, $white 0%);
   }
 
-  @include desktop() {
+  @media ($desktop) {
     background-image: linear-gradient(-4deg, $gray 83%, $white 0%);
   }
 }
 
 .price__bullets {
-  @include tablet() {
+  @media ($tablet) {
     display: none;
   }
 }
