--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -1,7 +1,7 @@
 .reviews__icon {
   display: none;
 
-  @include desktop() {
+  @media ($desktop) {
     position: absolute;
     top: 72px;
     left: 433px;
@@ -16,7 +16,7 @@
   margin-bottom: 32px;
   padding-top: 11px;
 
-  @include desktop() {
+  @media ($desktop) {
     width: 690px;
     margin: 0 auto;
     padding-top: 185px;
@@ -33,7 +33,7 @@
     display: block;
   }
 
-  @include tablet() {
+  @media ($tablet) {
     &--active {
       display: flex;
       flex-direction: column-reverse;
@@ -44,13 +44,13 @@
 .reviews__author-info {
   display: none;
 
-  @include tablet() {
+  @media ($tablet) {
     display: block;
     margin: 0;
     margin-bottom: 4px;
   }
 
-  @include desktop() {
+  @media ($desktop) {
     font-size: 18px;
     line-height: 30px;
   }
@@ -65,13 +65,13 @@
   font-weight: 700;
   line-height: 30px;
 
-  @include tablet() {
+  @media ($tablet) {
     margin-bottom: 5px;
 
     font-size: 20px;
   }
 
-  @include desktop() {
+  @media ($desktop) {
     margin-bottom: 3px;
 
     font-size: 24px;
@@ -83,7 +83,7 @@
 
   line-height: 30px;
 
-  @include tablet() {
+  @media ($tablet) {
     margin-bottom: 35px;
 
     font-size: 18px;
@@ -93,7 +93,7 @@
 .reviews__bullets {
   margin-bottom: 14px;
 
-  @include tablet() {
+  @media ($tablet) {
     margin-bottom: 7px;
   }
 }
