--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -13,10 +13,16 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+  margin: 0 20px;
 
   @media ($tablet) {
     align-items: flex-start;
     flex-direction: row;
+  }
+
+  @media ($desktop) {
+    width: 940px;
+    margin: 0 auto;
   }
 }
 
@@ -25,12 +31,12 @@
   margin-bottom: 32px;
 
   @media ($tablet) {
-    margin-right: 68px;
+    margin-right: 30px;
     margin-bottom: 0;
   }
 
   @media ($desktop) {
-    margin-right: 230px;
+    margin-right: 52px;
   }
 }
 
@@ -70,7 +76,7 @@
   margin-bottom: 29px;
 
   @media ($tablet) {
-    margin-right: auto;
+    margin-right: 40px;
     margin-bottom: 0;
   }
 }
