--- a/source/sass/blocks/social-list.scss
+++ b/source/sass/blocks/social-list.scss
@@ -2,11 +2,10 @@
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
-  width: 188px;
 }
 
 .social-list__item {
-  padding-bottom: 10px;
+  margin: 0 5px 10px 5px;
 }
 
 .social-list__link {
